Fix a problem that underlines is broken in chrome #9

--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -47,3 +47,8 @@ $color-main-bg:     #fafcfe;
   padding-bottom: 2px;
   padding-top: 2px;
 }
+
+// Fix a problem that underlines is broken in chrome
+a:hover, a:active {
+  outline: 1px solid transparent;
+}
